crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_15_use_variable.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: var x = 27; print x;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (var x (global @1) 27.0)
   (print (global x @1)))
27
[0mλ» [1m[0m
----- stderr -----
