crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_16_multiple_variables.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: var x = 27; var y = x + 42; print y;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m69
[0mλ» [1m[0m
----- stderr -----
