crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_17_multiple_variables.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: var x = 42; var y = 27; print x; print y; print x + y;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (var x (global @3) 42.0)
   (var y (global @4) 27.0)
   (print (global x @3))
   (print (global y @4))
   (print (+ (global x @3) (global y @4))))
42
27
69
[0mλ» [1m[0m
----- stderr -----
