crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_19_undefined_variable.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: var x = 42; print x + y;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (var x (global @3) 42.0)
   (print (+ (global x @3) (global-by-name y))))
[0mλ» [1m[0m
----- stderr -----
Error: Undefined variable `y`.
   ╭─[<input>:1:23]
   │
 1 │ var x = 42; print x + y;
   │                       ─  
───╯
