crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_20_long_undefined_variable_name.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: 42 + long_variable_name;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m
----- stderr -----
Error: Undefined variable `long_variable_name`.
   ╭─[<input>:1:6]
   │
 1 │ 42 + long_variable_name;
   │      ──────────────────  
───╯
