crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_21_incomplete_statement.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: print
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0m.. [1m[0m
(program)
[0mλ» [1m[0m
----- stderr -----
