crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_22_unterminated_string_literal.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: "\"unterminated string literal"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m
----- stderr -----
[line 1] Error: Unterminated string.
