crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_23_unterminated_string_literal_doesnt_break_repl.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: "\"unterminated string literal\n4 + 5;"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m(program
   (expr (+ 4.0 5.0)))
[38;2;170;034;255m[1m=> 9[0m
[0mλ» [1m[0m
----- stderr -----
Error: unterminated string literal
   ╭─[<input>:1:1]
   │
 1 │ "unterminated string literal
   │ ─────────────────────────────  
───╯
