crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_27_use_variable_in_multiple_lines.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: "var x = 42;\nprint x;"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (var x (global @1) 42.0))
[0mλ» [1m[0m(program
   (print (global x @0)))
42
[0mλ» [1m[0m
----- stderr -----
